Uses basex container as base, server runs

--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -1,4 +1,3 @@
-FROM docker/whalesay:latest
-RUN apt-get -y update && apt-get install -y fortunes
-CMD /usr/games/fortune -a | cowsay
+FROM dfst/basex:latest
+CMD basex/bin/basexhttp -h 8984
 
