--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -9,11 +9,11 @@ MAINTAINER Eliot Kimber "ekimber@contrext.com"
 #
 # Add the DFST link manager web app from
 # github:
-RUN wget https://github.com/dita-for-small-teams/dfst-linkmgmt-basex/archive/develop.zip
-RUN unzip develop.zip 
-RUN cp dfst-linkmgmt-basex-develop/webapp/*.xqm basex/webapp/
-RUN cp -r dfst-linkmgmt-basex-develop/webapp/static/* basex/webapp/static/
-RUN cp -r dfst-linkmgmt-basex-develop/modules/* basex/repo
-ADD basex/dot_basex /home/basex/basex/.basex
+RUN wget https://github.com/dita-for-small-teams/dfst-linkmgmt-basex/archive/develop.zip && \
+  unzip develop.zip && rm develop.zip 
+RUN cp dfst-linkmgmt-basex-develop/webapp/*.xqm basex/webapp/ && \
+    cp -r dfst-linkmgmt-basex-develop/webapp/static/* basex/webapp/static/ && \
+    cp -r dfst-linkmgmt-basex-develop/modules/* basex/repo
+COPY basex/dot_basex /home/basex/basex/.basex
 CMD basex/bin/basexhttp -h 8984
 
