Refined how the mounted directories are set up so it actually works when mounted

--- a/containers/basex/Dockerfile
+++ b/containers/basex/Dockerfile
@@ -1,15 +1,16 @@
 FROM java:8
+ENV BASEX_VERSION 8.3
+ENV BASEX_VERSION_NODOT 83
 # Make the data, repo, and webapp directories available
 # as volumes. 
 # 
 # In particular this allows the data directory to be stored
 # directly on the host machine so that the link management
 # database is not lost if the container is deleted.
-RUN mkdir -p /opt/basex
+RUN mkdir -p /opt/basex/data && \
+    mkdir -p /opt/basex/repo && \
+    mkdir -p /opt/basex/webapp
 RUN chmod -R a+rwx /opt 
-RUN ln -s /home/basex/basex/data /opt/basex/data && \
-    ln -s /home/basex/basex/repo /opt/basex/repo && \
-    ln -s /home/basex/basex/webapp /opt/basex/webapp
 
 # Set up Basex user
 RUN useradd -u 5555 -ms /bin/bash basex
@@ -17,8 +18,19 @@ ENV HOME /home/basex
 USER 5555
 WORKDIR /home/basex
 
-RUN wget -O basex.zip http://files.basex.org/releases/8.3/BaseX83.zip
+RUN wget -O basex.zip http://files.basex.org/releases/${BASEX_VERSION}/BaseX${BASEX_VERSION_NODOT}.zip
 RUN unzip basex.zip
+# Link the default directories to the mounts in 
+# /opt/basex so the mounts are in a consistent
+# location.
+RUN cp -r /home/basex/basex/webapp /opt/basex
+RUN rm -Rf /home/basex/basex/data && \
+    rm -Rf /home/basex/basex/repo  && \
+    rm -Rf /home/basex/basex/webapp
+RUN ln -s /opt/basex/data /home/basex/basex  && \
+    ln -s /opt/basex/repo /home/basex/basex  && \
+    ln -s /opt/basex/webapp /home/basex/basex 
+
 # Expose the ports for the base BaseX server (used by the DFST git commit hooks
 # and the HTTP server, respectively:
 EXPOSE 1984 8984
