Removed unneed basex container (using basex-managed version). Updated Dockerfile to reflect basex/basexhttp container

--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -1,19 +1,23 @@
-FROM dfst/basex:latest
+FROM basex/basexhttp:latest
 MAINTAINER Eliot Kimber "ekimber@contrext.com"
-# The directory structure of the container
-# is /home/basex, so everything we want
-# to add goes inside the basex/ directory
+#
+# The basex/basexhttp setup puts the data, repo.
+# and webapp directories at the root of the file system
 #
 # The base container sets the working directory
-# to /home/basex
+# to /opt/basex
 #
 # Add the DFST link manager web app from
 # github:
 RUN wget https://github.com/dita-for-small-teams/dfst-linkmgmt-basex/archive/develop.zip && \
   unzip develop.zip && rm develop.zip 
-RUN cp dfst-linkmgmt-basex-develop/webapp/*.xqm basex/webapp/ && \
-    cp -r dfst-linkmgmt-basex-develop/webapp/static/* basex/webapp/static/ && \
-    cp -r dfst-linkmgmt-basex-develop/modules/* basex/repo
-COPY basex/dot_basex /home/basex/basex/.basex
-CMD basex/bin/basexhttp -h 8984
+RUN cp dfst-linkmgmt-basex-develop/webapp/*.xqm /webapp/ && \
+    cp -r dfst-linkmgmt-basex-develop/webapp/static/* /webapp/static/ && \
+    cp -r dfst-linkmgmt-basex-develop/modules/* /repo
+COPY basex/dot_basex /opt/basex
+RUN cat /opt/basex/dot_basex >> .basex && rm /opt/basex/dot_basex
+#
+# End of Dockerfile
+#
+
 
