Set up initial dfst/gitlab image, updated docs to reflect

--- a/containers/gitlab-dfst/Dockerfile
+++ b/containers/gitlab-dfst/Dockerfile
@@ -1,4 +1,8 @@
-FROM docker/whalesay:latest
-RUN apt-get -y update && apt-get install -y fortunes
-CMD /usr/games/fortune -a | cowsay
-
+FROM gitlab/gitlab-ce
+# Copied from the base GitLab Docker file
+# (https://gitlab.com/gitlab-org/omnibus-gitlab/blob/master/docker/Dockerfile):
+# Wrapper to handle signal, trigger runit and reconfigure GitLab
+CMD ["/assets/wrapper"]
+#
+# End of Docker file
+#
