Bash script to manage the DFST containers via the docker-compose command

--- a/docker-compose/dfst-server/docker-compose.yml
+++ b/docker-compose/dfst-server/docker-compose.yml
@@ -48,6 +48,7 @@ gitlab:
   image: dfst/gitlab
   container_name: gitlab-dfst
 #  environment:
+  hostname: ${HOSTNAME}
   ports: 
    - "80:80"
    - "443:443"
