--- a/containers/dita-ot-dfst/Dockerfile
+++ b/containers/dita-ot-dfst/Dockerfile
@@ -1,4 +1,6 @@
-FROM docker/whalesay:latest
-RUN apt-get -y update && apt-get install -y fortunes
-CMD /usr/games/fortune -a | cowsay
+FROM dfst/dita-ot
+#
+# Put any additional setup here, e.g., getting
+# additional OT plugins, removing stuff you don't
+# need from the base install, other tools, etc.
 
