--- a/containers/dita-ot-dfst/Dockerfile
+++ b/containers/dita-ot-dfst/Dockerfile
@@ -3,4 +3,14 @@ FROM dfst/dita-ot
 # Put any additional setup here, e.g., getting
 # additional OT plugins, removing stuff you don't
 # need from the base install, other tools, etc.
+WORKDIR $DITA_HOME
+# FOR OT 2.x you can use the dita --install {uri} command 
+# to install plugins from Zip files pull directly from
+# the Web (e.g., from GitHub repos).
+#
+# For OT 1.x you have to get the plugin, copy it into
+# place and then run the ant integrator.xml script.
+# The same technique also works for the 2.x OT as well
+#
+ENVIRONMENT DITA_COMM_URL 
 
