--- a/containers/dita-ot/Dockerfile
+++ b/containers/dita-ot/Dockerfile
@@ -1,8 +1,9 @@
-FROM dfst/dita-ot-base
+FROM ditaot/dita-ot-base
 MAINTAINER Eliot Kimber "ekimber@contrext.com"
-# Make the whole OT itself available
+USER root
 VOLUME /opt/dita-ot/DITA-OT
 VOLUME /opt/dita-ot/userdata
+VOLUME /opt/dita-ot/out
 #
 # End of Dockerfile
 #
