--- a/containers/dita-ot/docker-compose.yml
+++ b/containers/dita-ot/docker-compose.yml
@@ -11,5 +11,5 @@ dita-ot-dfst:
   extends:
      service: _dita-ot-dfst
   container_name: dita-ot-dfst
-  image: dfst/dita-ot-dfst
+  image: dfst/dita-ot
   
