--- a/containers/gitlab-dfst/docker-compose.yml
+++ b/containers/gitlab-dfst/docker-compose.yml
@@ -1,21 +1,18 @@
+version: "2"
 #
-# Docker-compose build file for
-# the gitlab DFST container
+# Docker-compose file for
+# the gitlab DFST container.
 #
-
-_gitlab-dfst:
-  build: .
-#  environment:
-  hostname: ${HOSTNAME}
-  ports: 
-   - "80:80"
-   - "443:443"
-   - "8022:22"
-
-gitlab-dfst:
-  extends:
-     service: _gitlab-dfst
-  container_name: gitlab-dfst
-   
-  image: dfst/gitlab-dfst
-  
+services:
+  gitlab-dfst:
+    hostname: ${HOSTNAME}
+    ports: 
+     - "80:80"
+     - "443:443"
+     - "8022:22"
+    container_name: gitlab-dfst
+     
+    image: dfst/gitlab-dfst
+#
+# End of compose file.
+#  
