Add BaseX bin directory as a volume for access by other containers. GitLab uses volumes from BaseX

--- a/containers/gitlab-dfst/Dockerfile
+++ b/containers/gitlab-dfst/Dockerfile
@@ -2,6 +2,9 @@ FROM gitlab/gitlab-ce
 # Copied from the base GitLab Docker file
 # (https://gitlab.com/gitlab-org/omnibus-gitlab/blob/master/docker/Dockerfile):
 # Wrapper to handle signal, trigger runit and reconfigure GitLab
+#
+ENV PATH ${PATH}:/opt/basex/bin/
+
 CMD ["/assets/wrapper"]
 #
 # End of Docker file
