--- a/docker-compose/dfst-server/docker-compose.yml
+++ b/docker-compose/dfst-server/docker-compose.yml
@@ -53,7 +53,9 @@ services:
        file: ../../containers/gitlab-dfst/docker-compose.yml
        service: gitlab-dfst
     volumes_from:
-     - dita-ot
+      - dita-ot
+      - linkmgr
+     
   
 #
 # DFST Link Manager
