--- a/containers/gitlab-dfst/docker-compose.yml
+++ b/containers/gitlab-dfst/docker-compose.yml
@@ -2,7 +2,9 @@ version: "2"
 #
 # Docker-compose file for
 # the gitlab DFST container.
-#
+# 
+# Makes the git-data directory a volume so we can mount
+# it locally.
 services:
   gitlab-dfst:
     hostname: ${HOSTNAME}
@@ -11,6 +13,7 @@ services:
       - "443:443"
       - "8022:22"
     container_name: gitlab-dfst
+    volumes: ["/srv/gitlab:/var/opt/gitlab"]
      
     image: dfst/gitlab-dfst
 #
