--- a/docker-compose/dfst-server/docker-compose.yml
+++ b/docker-compose/dfst-server/docker-compose.yml
@@ -64,6 +64,28 @@ services:
  
 #
 # GitLab
+
+#
+# Copied from https://github.com/sameersbn/docker-gitlab/blob/master/docker-compose.yml
+#
+# Runs the required postgresql and redis servers:
+#
+  postgresql:
+    restart: always
+    image: sameersbn/postgresql:9.4-12
+    environment:
+      - DB_USER=gitlab
+      - DB_PASS=password
+      - DB_NAME=gitlabhq_production
+    volumes:
+      - /srv/docker/gitlab/postgresql:/var/lib/postgresql
+    
+  redis:
+    restart: always
+    image: sameersbn/redis:latest
+    volumes:
+      - /srv/docker/gitlab/redis:/var/lib/redis      
+
 #
 # The GitLab server provides two services:
 #
@@ -77,9 +99,15 @@ services:
        file: ../../containers/gitlab-dfst/docker-compose.yml
        service: gitlab-dfst
     hostname: ${HOSTNAME}
+    environment:
+      - GITLAB_SECRETS_DB_KEY_BASE=8WgpQbrcNZtXPzzGL3cgsdL234HmpRsfqWsKJLtqwJJk2VkQS2FFVBwssV3xcnWt
+      
+    volumes:
+      - /srv/gitlab/git-data:/var/opt/gitlab/git-data
     volumes_from:
       - dita-ot
       - linkmgr
+      
 #  
 # End of compose file.
 #
