Include custom hooks and configuration scripts

--- a/containers/gitlab-dfst/Dockerfile
+++ b/containers/gitlab-dfst/Dockerfile
@@ -3,7 +3,20 @@ FROM gitlab/gitlab-ce
 # (https://gitlab.com/gitlab-org/omnibus-gitlab/blob/master/docker/Dockerfile):
 # Wrapper to handle signal, trigger runit and reconfigure GitLab
 #
-ENV PATH ${PATH}:/opt/basex/bin/
+# Set up configuration scripts and
+# custom hooks
+#
+COPY admin-scripts /var/opt/dfst/bin/
+RUN apt-get install -y unzip && \
+    cd /var/opt/dfst/bin && \
+    chmod a+x *
+RUN cd /var/opt/dfst && \
+    wget https://github.com/dita-for-small-teams/dfst-git-commit-hooks/archive/develop.zip && \
+    unzip develop.zip && \
+    rm develop.zip && \
+    mv dfst-git-commit-hooks-develop/server-side custom_hooks     
+
+ENV PATH ${PATH}:/var/opt/dfst/bin
 
 CMD ["/assets/wrapper"]
 #
