--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -25,7 +25,6 @@ version: "2"
 # variables later (e.g., ports for Web services,
 # host-side mount points).
 
-
 services:
 #
 # DITA OT
@@ -111,6 +110,13 @@ services:
     volumes_from:
       - dita-ot
       - linkmgr
+
+#
+# Demo content data volume:
+#
+# Defines volume /opt/dita-community/data/Thunderbird
+  demo-content:
+    image: ditacommunity/demo-content
       
 #  
 # End of compose file.
