Suppress error messages about existing links in add-custom-hooks

--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -117,6 +117,7 @@ services:
 # Defines volume /opt/dita-community/data/Thunderbird
   demo-content:
     image: ditacommunity/demo-content
+    command: top
       
 #  
 # End of compose file.
