--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -7,18 +7,14 @@ MAINTAINER Eliot Kimber "ekimber@contrext.com"
 # The base container sets the working directory
 # to /opt/basex
 #
-# Add the DFST link manager web app from
-# github:
-RUN wget https://github.com/dita-for-small-teams/dfst-linkmgmt-basex/archive/develop.zip && \
-  unzip develop.zip && \
-  rm develop.zip
+#
+# Get the BaseX Ruby client and add it to the bin/ directory so we have it handy 
+# if we need it (but note that the GitLab container also gets its own copy of this
+# file and stores it with the post-receive git hook there.
 RUN wget -O bin/BaseXClient.rb https://github.com/BaseXdb/basex/raw/master/basex-api/src/main/ruby/BaseXClient.rb && \
   chmod a+x bin/*.rb && \
   ls -al bin
 
-RUN cp dfst-linkmgmt-basex-develop/webapp/*.xqm /webapp/ && \
-    cp -r dfst-linkmgmt-basex-develop/webapp/static/* /webapp/static/ && \
-    cp -r dfst-linkmgmt-basex-develop/modules/* /repo
 COPY basex/dot_basex /opt/basex/dot_basex
 
 RUN cat /opt/basex/dot_basex >> .basex && rm /opt/basex/dot_basex
