Use new container for web app

--- a/containers/link-manager-basex/docker-compose.yml
+++ b/containers/link-manager-basex/docker-compose.yml
@@ -14,6 +14,9 @@ services:
   linkmgr-basex:
     image: dfst/link-manager-basex
     container_name: linkmgr-dfst
+    # Put the data in the Docker Machine so it
+    # persists as long as the machine is preserved.
+    volumes: ["/srv/basex/data:/data"]
     ports: 
      - "1984:1984"
      - "8984:8984"
