Use Hub-served caddy container

--- a/containers/caddy-dfst/docker-compose.yml
+++ b/containers/caddy-dfst/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     container_name: caddy-dfst
     volumes: ["/srv/www"] 
      
-#    image: dfst/caddy-dfst
-    image: caddy
+    image: dfst/caddy-dfst
 #
 # End of compose file.
 #  
