--- a/containers/gitlab-dfst/docker-compose.yml
+++ b/containers/gitlab-dfst/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "443:443"
       - "8022:22"
     container_name: gitlab-dfst
-    volumes: ["/srv/gitlab:/var/opt/gitlab"]
+    volumes: ["/tmp/gitlab:/var/opt/gitlab"]
      
     image: dfst/gitlab-dfst
 #
