Use ekimber environment variable to set locally-mounted directories

--- a/containers/caddy-dfst/docker-compose.yml
+++ b/containers/caddy-dfst/docker-compose.yml
@@ -8,7 +8,7 @@ version: "2"
 # 
 services:
   caddy-dfst:
-    hostname: ${HOSTNAME}
+    # hostname: ${HOSTNAME}
     ports: 
       - "8080:2015"
     container_name: caddy-dfst
